fix: 恢复误删的onLoad/onUnload (编辑Page初始化区块时丢失)
